--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@liveblocks/client": "^1.10.0",
     "@liveblocks/react": "^1.10.0",
     "@liveblocks/react-comments": "^1.10.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "fabric": "^5.3.0",
@@ -24,14 +26,20 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.18",
+    "css-loader": "^6.10.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "next-transpile-modules": "^10.0.1",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.1",
+    "raw-loader": "^4.0.2",
+    "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
